# librime-ai-predict

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  deps.mk
docs/: DEMO_GIF.md  DISCUSSION_DRAFT.md  FRESH_CLONE_REPRO.md  GITHUB_REPO_SETUP.md  HUGGINGFACE_MODEL_CARD.md  MODEL_GITHUB_RELEASE.md
examples/: schema.fragment.yaml
scripts/: download_model.sh
src/: context_builder.cc  context_builder.h  ct2_backend.cc  ct2_backend.h  frontend_protocol.cc  frontend_protocol.h  inference_backend.h  predict_filter.cc  predict_filter.h  predict_module.cc  predict_translator.cc  predict_translator.h  prediction_engine.cc  prediction_engine.h
